Contextmenu: setposition throttling and initial jumping fix

--- a/themes/default/kd.contextmenu.styl
+++ b/themes/default/kd.contextmenu.styl
@@ -8,8 +8,11 @@
 */
 .jcontextmenu
   abs()
+  top                     -1000px
+  left                    -1000px
   display                 inline-block
   height                  auto
+  width                   auto
   overflow                visible
   z-index                 10000
   cursor                  default
